--- a/webserver/views/header.html
+++ b/webserver/views/header.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">watchmen</a>
+            <a class="navbar-brand" href="/">Monitor</a>
         </div>
         <div class="navbar-collapse collapse" id="main-nav-bar">
             <ul class="nav navbar-nav navbar-right">
