--- a/webserver/views/index.html
+++ b/webserver/views/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" ng-app="watchmenApp">
   <head>
-    <title>[M] - <%= title %></title>
+    <title>[M]</title>
     <link rel='stylesheet' href='<%=baseUrl%>build/style.css' />
     <meta name="viewport" content="width=device-width">
     <base href="<%=baseUrl%>">
