--- a/webserver/views/service-list.html
+++ b/webserver/views/service-list.html
@@ -27,7 +27,7 @@
         <table ng-table="tableParams" class="table-services table sorted table-striped table-condensed">
             <tbody>
 
-                <tr ng-class={ 'result-disabled':row.service.enabled===false, 'result-success':!row.status.currentOutage, 'result-error':row.status.currentOutage}
+                <tr ng-class="{'result-disabled':row.service.enabled===false, 'result-success':!row.status.currentOutage, 'result-error':row.status.currentOutage}"
                     ng-repeat="row in $data | filter:serviceFilter">
 
                     <% if ((user && user.isAdmin) || no_auth) { %>
@@ -76,8 +76,8 @@
                             <td data-title="'Host'" sortable="'service.name'">
                                 <span ng-if="row.service.isRestricted" class="glyphicon glyphicon-lock" aria-hidden="true"></span>
                                 <a class="name" href="/services/{{row.service.id}}/view">
-                        {{row.service.name}}
-                    </a>
+                                {{row.service.name}}
+                                </a>
                             </td>
 
                             <td header-class="'hidden-xs'" class="outages hidden-xs" data-title="'Downtime last 24h'" sortable="'status.last24Hours.downtime'">
